--- a/i3/config
+++ b/i3/config
@@ -56,6 +56,8 @@ bindsym $mod+u fullscreen toggle
 #toggle float
 bindsym $mod+space floating toggle
 
+bindsym $mod+w bar mode toggle
+
 #restart i3 interface
 bindsym $mod+Shift+r restart
 
@@ -130,7 +132,7 @@ bindsym $mod+F4 workspace F4
 bindsym $mod+F5 workspace F5
 
 # move to workspace
-bindsym $mod+Shift+esc  move container to workspace Escape
+bindsym $mod+Shift+Escape  move container to workspace esc
 bindsym $mod+Shift+1  move container to workspace 1
 bindsym $mod+Shift+2  move container to workspace 2
 bindsym $mod+Shift+3  move container to workspace 3
@@ -152,7 +154,7 @@ bar {
 #HERE WAS "tray_output primary"
 status_command i3status
 position bottom
-tray_output none
+tray_output primary
 font pango:DejaVu Sans Mono 10
 separator_symbol |
 }
