--- a/i3status/config
+++ b/i3status/config
@@ -12,6 +12,7 @@ order += "volume master"
 order += "memory"
 order += "cpu_usage"
 order += "cpu_temperature 0"
+order += "battery 0"
 order += "tztime local"
 
 disk "/" {
@@ -54,4 +55,18 @@ cpu_usage{
 cpu_temperature 0{
         format = "%degrees °C"
         path = "/sys/class/hwmon/hwmon0/device/hwmon/hwmon0/temp1_input"
+}
+
+
+
+battery 0 {
+	last_full_capacity = true
+        format = "%status %percentage"
+        format_down = ""
+        status_chr = ""
+        status_bat = ""
+        status_unk = ""
+        status_full = ""
+        path = "/sys/class/power_supply/BAT%d/uevent"
+        low_threshold = 10
 }
