--- a/.config/i3/config
+++ b/.config/i3/config
@@ -104,19 +104,22 @@ bindsym $mod+a sticky toggle
 
 bindsym $mod+i focus parent
 
+set $screen2 HDMI-1
+set $screen1 eDP-1
+
 workspace 2 output primary
 # set workspace in screens
-workspace esc output HDMI-A-0
-workspace  1 output HDMI-A-0 
-workspace  2 output HDMI-A-0 
-workspace  3 output HDMI-A-0 
-workspace  4 output HDMI-A-0 
-workspace  5 output HDMI-A-0 
-workspace F1 output DisplayPort-0
-workspace F2 output DisplayPort-0
-workspace F3 output DisplayPort-0
-workspace F4 output DisplayPort-0
-workspace F5 output DisplayPort-0
+workspace esc output $screen1
+workspace  1 output $screen1 
+workspace  2 output $screen1 
+workspace  3 output $screen1 
+workspace  4 output $screen1 
+workspace  5 output $screen1 
+workspace F1 output $screen2
+workspace F2 output $screen2
+workspace F3 output $screen2
+workspace F4 output $screen2
+workspace F5 output $screen2
 
 # switch to workspace
 bindsym $mod+Escape  workspace esc
