--- a/.config/i3/config
+++ b/.config/i3/config
@@ -5,9 +5,11 @@ set $mod2 Mod1
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
 exec --no-startup-id dex --autostart --environment i3
+exec --no-startup-id xbindkeys
+exec --no-startup-id picom
 
 # border config
-default_border pixel 2
+default_border pixel 4
 smart_borders on
 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
@@ -106,6 +108,7 @@ bindsym $mod+l move right
 
 # toggle sticky windows
 bindsym $mod+a sticky toggle
+bindsym $mod+Shift+a exec ~/Scripts/transWin.sh
 
 bindsym $mod+i focus parent
 
@@ -120,11 +123,21 @@ workspace  2 output $screen1
 workspace  3 output $screen1 
 workspace  4 output $screen1 
 workspace  5 output $screen1 
+workspace  6 output $screen1 
+workspace  7 output $screen1 
+workspace  8 output $screen1 
+workspace  9 output $screen1 
+workspace  0 output $screen1 
 workspace F1 output $screen2
 workspace F2 output $screen2
 workspace F3 output $screen2
 workspace F4 output $screen2
 workspace F5 output $screen2
+workspace F6 output $screen1 
+workspace F7 output $screen1 
+workspace F8 output $screen1 
+workspace F9 output $screen1 
+workspace F10 output $screen1 
 
 # switch to workspace
 bindsym $mod+Escape  workspace esc
@@ -133,11 +146,21 @@ bindsym $mod+2  workspace 2
 bindsym $mod+3  workspace 3
 bindsym $mod+4  workspace 4
 bindsym $mod+5  workspace 5
+bindsym $mod+6  workspace 6
+bindsym $mod+7  workspace 7
+bindsym $mod+8  workspace 8
+bindsym $mod+9  workspace 9
+bindsym $mod+0  workspace 0
 bindsym $mod+F1 workspace F1
 bindsym $mod+F2 workspace F2
 bindsym $mod+F3 workspace F3
 bindsym $mod+F4 workspace F4
 bindsym $mod+F5 workspace F5
+bindsym $mod+F6 workspace F6
+bindsym $mod+F7 workspace F7
+bindsym $mod+F8 workspace F8
+bindsym $mod+F9 workspace F9
+bindsym $mod+F10 workspace F10
 
 # move to workspace
 bindsym $mod+Shift+Escape  move container to workspace esc
@@ -146,11 +169,21 @@ bindsym $mod+Shift+2  move container to workspace 2
 bindsym $mod+Shift+3  move container to workspace 3
 bindsym $mod+Shift+4  move container to workspace 4
 bindsym $mod+Shift+5  move container to workspace 5
+bindsym $mod+Shift+6  move container to workspace 6
+bindsym $mod+Shift+7  move container to workspace 7
+bindsym $mod+Shift+8  move container to workspace 8
+bindsym $mod+Shift+9  move container to workspace 9
+bindsym $mod+Shift+0  move container to workspace 0
 bindsym $mod+Shift+F1 move container to workspace F1
 bindsym $mod+Shift+F2 move container to workspace F2
 bindsym $mod+Shift+F3 move container to workspace F3
 bindsym $mod+Shift+F4 move container to workspace F4
 bindsym $mod+Shift+F5 move container to workspace F5
+bindsym $mod+Shift+F6 move container to workspace F6
+bindsym $mod+Shift+F7 move container to workspace F7
+bindsym $mod+Shift+F8 move container to workspace F8
+bindsym $mod+Shift+F9 move container to workspace F9
+bindsym $mod+Shift+F0 move container to workspace F0
 
 #toggle the window stacking
 bindsym $mod+o layout toggle stacking split
@@ -159,13 +192,27 @@ bindsym $mod+o layout toggle stacking split
 # finds out, if available)
 
 bar {
-	#HERE WAS "tray_output primary"
-	status_command i3status
-	position bottom
-	tray_output primary
-	font pango:DejaVu Sans Mono 14
+    id bar-1
+    status_command py3status --config ~/.config/i3status/config1
+	position top
+	tray_output none
+	font pango:DejaVu Sans Mono 16
 	separator_symbol |
 	mode hide
 	hidden_state hide
 	modifier none
 }
+
+bar {
+    id bar-2
+    status_command py3status --config ~/.config/i3status/config2
+	position bottom
+	tray_output primary
+	font pango:DejaVu Sans Mono 16
+	separator_symbol |
+	mode hide
+	hidden_state hide
+    modifier none
+    workspace_buttons no
+}
+
