--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -310,7 +310,7 @@ map <END>      move to=-1
 map <PAGEDOWN> move down=1   pages=True
 map <PAGEUP>   move up=1     pages=True
 map <CR>       move right=1
-map <DELETE>   console delete
+map <DELETE>   shell trash-put %s
 map <INSERT>   console touch%space
 
 # VIM-like
