--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -109,7 +109,7 @@ set collapse_preview true
 set save_console_history true
 
 # Draw the status bar on top of the browser window (default: bottom)
-set status_bar_on_top false
+set status_bar_on_top true
 
 # Draw a progress bar in the status bar which displays the average state of all
 # currently running tasks which support progress bars?
@@ -119,7 +119,7 @@ set draw_progress_bar_in_status_bar true
 set draw_borders true
 
 # Display the directory name in tabs?
-set dirname_in_tabs false
+set dirname_in_tabs true
 
 # Enable the mouse support?
 set mouse_enabled true
