--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -85,7 +85,7 @@ ext x?html?, has w3m,               terminal = w3m "$@"
 # Misc
 #-------------------------------------------
 # Define the "editor" for text files as first action
-mime ^text,  label editor = ${VISUAL:-$EDITOR} -- "$@"
+mime ^text,  label editor = nvim -- "$@"
 mime ^text,  label pager  = $PAGER -- "$@"
 !mime ^text, label editor, ext xml|json|tsx|ts|jsx|lua|csv|tex|py|pl|rb|rs|js|sh|php|dart|nim = ${VISUAL:-$EDITOR} -- "$@"
 !mime ^text, label pager,  ext xml|json|csv|tex|py|pl|rb|rs|js|sh|php|dart|nim = $PAGER -- "$@"
@@ -306,3 +306,4 @@ mime application/x-executable = "$1"
 # Move the file to trash using trash-cli.
 label trash, has trash-put = trash-put -- "$@"
 label trash = mkdir -p -- "${XDG_DATA_HOME:-$HOME/.local/share}/ranger/trash"; mv -- "$@" "${XDG_DATA_HOME:-$HOME/.local/share}/ranger/trash"
+#map del shell trash-put %s
