--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -269,7 +269,7 @@ map #  console shell -p%space
 map s  console shell%space
 map r  chain draw_possible_programs; console open_with%space
 #map f  console find%space
-map f console scout -ftsea%space
+map f console scout -ftse%space
 map cd console cd%space
 
 # Change the line mode
